# robot_behaviours

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  6well-insert.stl  99-hamilton.rules  CLAUDE.md  NOTES-pylabrobot-feedback.md  README.md  Sociius Style Guide _Standalone_.html  TODO  architecture.excalidraw  architecture.md  colcon_defaults.yaml  docker-compose.franka.yml  docker-compose.lite.yml  docker-compose.yml  install-liconic-udev.sh  package-lock.json  pixi.toml  start_sim.sh
agent/robot_script_server/: CMakeLists.txt  package.xml  pixi.toml
agent/robot_script_server/robot_script_server/: script_action_server_node.py
agent/robot_skill_mcp/: CMakeLists.txt  package.xml  pixi.toml
agent/robot_skill_mcp/robot_skill_mcp/: mcp_ros_bridge.py  mcp_server.py
lib/robot_arm_skills/: CMakeLists.txt  package.xml
lib/robot_arm_skills/robot_arm_skills/: __init__.py  _recorder_registry.py  rosbag_skills_node.py
lib/robot_arm_skills/src/: capture_point_cloud_skill.cpp  check_collision_skill.cpp  check_system_ready_skill.cpp  detect_object_skill.cpp  gripper_control_skill.cpp  move_cartesian_linear_skill.cpp  move_to_cartesian_pose_skill.cpp  move_to_joint_config_skill.cpp  move_to_named_config_skill.cpp  record_rosbag_skill.cpp  robot_enable_skill.cpp  set_digital_io_skill.cpp  stop_recording_skill.cpp  update_planning_scene_skill.cpp
lib/robot_skill_advertise/: CMakeLists.txt  package.xml  pixi.toml
lib/robot_skill_advertise/robot_skill_advertise/: __init__.py
lib/robot_skills_msgs/: CMakeLists.txt  package.xml  pixi.toml
lib/robot_skills_msgs/action/: CapturePointCloud.action  CheckCollision.action  CheckSystemReady.action  DetectObject.action  ExecuteBehaviorTree.action  FrankaGripperControl.action  GripperControl.action  ImagePlate.action  MoveCartesianLinear.action  MoveToCartesianPose.action  RecordRosbag.action  RobotEnable.action  RunScript.action  StopRecording.action
lib/robot_skills_msgs/msg/: DryRunStatus.msg  LeaseState.msg  LogEvent.msg  SkillDescription.msg  SkillManifest.msg  TaskState.msg  TaskStep.msg
lib/robot_skills_msgs/srv/: AddPlate.srv  ApproveDryRun.srv  CancelActiveTask.srv  ComposeTask.srv  GetSkillDescriptions.srv  OperatorDecision.srv  PauseCampaign.srv  RegisterScript.srv  ReleaseLease.srv  RenewLease.srv  RetirePlate.srv  ValidatePlan.srv
src/meca500_bringup/: CMakeLists.txt
src/meca500_bringup/config/: aruco_target.yaml
src/meca500_bringup/launch/: moveit.launch.py  startup_calibration.launch.py
src/meca500_bringup/meshes/: mecatable_simple.stl
src/meca500_bringup/scripts/: publish_table_scene.py
src/meca500_bringup/src/: crop_pointcloud.cpp
src/meca500_moveit/: package.xml
src/meca500_moveit/config/: initial_positions.yaml  kinematics.yaml  meca500.srdf  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  servo.yaml
src/meca500_moveit/launch/: setup_assistant.launch.py
src/robot_behaviors/: CMakeLists.txt  package.xml  pixi.toml
src/robot_behaviors/robot_behaviors/: __init__.py  behavior_library.py
src/robot_behaviors/trees/: experiment_wrapper.xml  full_demo.xml  human_interaction_demo.xml  move_to_home.xml  move_to_home_experiment.xml  move_to_home_no_gripper.xml  move_to_over_seed.xml  move_to_seed_ready.xml  pick_and_place.xml  seed_collection.xml  seed_pick.xml  seed_replace.xml  test_bb_operator_smoke.xml  test_dashboard_campaign.xml  test_fr3_sim.xml  test_hamilton_sim.xml  test_imaging_sim.xml  test_liconic_smoke.xml  test_meca500_proxy.xml  test_meca500_proxy_v2.xml  test_meca500_sim.xml  test_meca500_sim_leased.xml
src/robot_bt_nodes/: CMakeLists.txt  package.xml  pixi.toml
src/robot_bt_nodes/src/: bt_nodes_plugin.cpp
src/robot_dashboard/: CMakeLists.txt  package.xml  pixi.toml
src/robot_dashboard/config/: rosbridge_params.yaml
src/robot_dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
src/robot_dashboard/launch/: dashboard.launch.py
src/robot_dashboard/scripts/: serve_dashboard.py
src/robot_mock_skill_atoms/: CMakeLists.txt  package.xml  pixi.toml
src/robot_mock_skill_atoms/config/: mock_params.yaml
src/robot_mock_skill_atoms/src/: mock_capture_point_cloud.cpp  mock_check_collision.cpp  mock_check_system_ready.cpp  mock_detect_object.cpp  mock_gripper_control.cpp  mock_joint_state_publisher.cpp  mock_move_cartesian_linear.cpp  mock_move_to_cartesian_pose.cpp  mock_move_to_joint_config.cpp  mock_move_to_named_config.cpp  mock_record_rosbag.cpp  mock_robot_enable.cpp  mock_set_digital_io.cpp  mock_skills_node.cpp  mock_update_planning_scene.cpp
src/robot_sim_config/: CMakeLists.txt  package.xml  pixi.toml
src/robot_sim_config/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/robot_sim_config/launch/: sim.launch.py
src/robot_sim_config/urdf/: sim_robot.urdf.xacro
src/robot_skill_atoms/: CMakeLists.txt  package.xml
src/robot_skill_atoms/src/: capture_point_cloud_skill.cpp  check_collision_skill.cpp  check_system_ready_skill.cpp  detect_object_skill.cpp  gripper_control_skill.cpp  move_cartesian_linear_skill.cpp  move_to_cartesian_pose_skill.cpp  move_to_joint_config_skill.cpp  move_to_named_config_skill.cpp  record_rosbag_skill.cpp  robot_enable_skill.cpp  set_digital_io_skill.cpp  skills_node.cpp  update_planning_scene_skill.cpp
src/robot_skill_server/: CMakeLists.txt  package.xml  pixi.toml
src/robot_skill_server/config/: diagnostics_aggregator.yaml  robots.yaml  skill_server.rviz
src/robot_skill_server/launch/: fr3_real.launch.py  lab_full.launch.py  meca500_real.launch.py  orchestrator.launch.py  robot_system.launch.py  sim_fr3.launch.py  sim_hamilton.launch.py  sim_lab.launch.py  sim_liconic.launch.py  sim_meca500.launch.py  skill_atoms_remote.launch.py  skill_server.launch.py  skill_server_imaging_only.launch.py  skill_server_lite.launch.py
src/robot_skill_server/robot_skill_server/: __init__.py  bb_operator_node.py  bt_executor.py  launch_helpers.py  lease_broker.py  mcp_ros_bridge.py  mcp_server.py  (+8 more)
(+433 files in other folders)
