<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_skill_advertise</name>
  <version>0.1.0</version>
  <description>
    Shared advertise/discovery primitives for the Robot Skills Framework.
    Ships a Python helper (SkillAdvertiser) and a header-only C++ helper
    so any node hosting skill action servers can publish a latched
    SkillManifest on its `~/skills` topic with one import. QoS profile
    is centralised here so publisher and subscriber agree byte-for-byte.
  </description>
  <maintainer email="dev@example.com">Robot Skills Framework</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>robot_skills_msgs</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
