<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_dashboard</name>
  <version>0.1.0</version>
  <description>Web-based robot monitoring dashboard replacing Groot2 and rosboard</description>
  <maintainer email="dev@example.com">Robot Skills Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosbridge_library</exec_depend>
  <exec_depend>rosapi</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
